Fixed Play height overlap

--- a/frontend/src/pages/Play.module.css
+++ b/frontend/src/pages/Play.module.css
@@ -32,7 +32,7 @@
 .game-text {
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 120px - 40px);
+  min-height: calc(100vh - 120px - 60px);
   min-width: 300px;
   flex-grow: 1;
   justify-content: center;
